activities page done

--- a/templates/activities2/barcelona.html.twig
+++ b/templates/activities2/barcelona.html.twig
@@ -1,12 +1,13 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Barcelna benvenudo!{% endblock %}
+{% block title %}Barcelona benvenudo!{% endblock %}
 
 {% block body %}
-
-<h1 class="dalal">Welcome to Barcelona! </h1>
+<br>
+<h1 class="animated-title">Welcome to Barcelona! </h1>
 <h2 class="dalal">Bienvenudo a Barcelona</h2>
-<h3 class="taneu">Choose your activities:</h3>
+<h5 class="dalal">Dreamlike architecture, colorful markets and tasty tapas await you in the Catalan capital.</h5><br>
+<h3 class="animated-titles"><b>Barcelona:</b> popular activities</h3>
 
 <div class="tokyo">
 <div class="row row-cols-1 row-cols-md-3 g-4">
@@ -14,12 +15,19 @@
     <div class="card h-100">
       <img src="assets/IMG/esGuell.jpg" class="card-img-top" alt="...">
       <div class="card-body">
-        <h5 class="card-title">Guêl Parc</h5>
-        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. </p>
+        <h5 class="card-title"><span title="Duration 6 hrs and Valid for 1 day">Güell Parc</span></h5>
+           <div class="star-rating me-3">
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star"></span>
+                  <span class="fa fa-star"></span>
+                </div>
+        <p class="card-text">Explore one of Gaudí's legendary creations and admire a magnificent panorama of Barcelona.</p>
       </div>
       <p class="xaliss">Price: 60€</p>
       <div class="card-footer">
-        <small class="text-body-secondary"><button class="cartess">Add to cart</button></small>
+        <small class="text-body-secondary"><button class="button" style="vertical-align:middle"><span>Add</span></button></small>
       </div>
     </div>
   </div>
@@ -27,12 +35,19 @@
     <div class="card h-100">
       <img src="assets/IMG/esPicasso.jpg" class="card-img-top" alt="...">
       <div class="card-body">
-        <h5 class="card-title">Picasso Museum of Barcelona</h5>
-        <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+        <h5 class="card-title"><span title="Duration 3 hrs and Valid for 1 day">Picasso Museum of Barcelona</span></h5>
+           <div class="star-rating me-3">
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star"></span>
+                  <span class="fa fa-star"></span>
+                </div>
+        <p class="card-text">A museum dedicated to the life and work of Pablo Picasso, featuring an extensive collection.</p>
       </div>
         <p class="xaliss">Price: 30€</p>
       <div class="card-footer">
-        <small class="text-body-secondary"><button class="cartess">Add to cart</button></small>
+        <small class="text-body-secondary"><button class="button" style="vertical-align:middle"><span>Add</span></button></small>
       </div>
     </div>
   </div>
@@ -40,12 +55,19 @@
     <div class="card h-100">
       <img src="assets/IMG/esCN.jpg" class="card-img-top" alt="...">
       <div class="card-body">
-        <h5 class="card-title">Camp Nou Visit</h5>
-        <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+        <h5 class="card-title"><span title="Duration 1 hr and Valid for 1 day">Camp Nou Visit</span></h5>
+           <div class="star-rating me-3">
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star"></span>
+                  <span class="fa fa-star"></span>
+                </div>
+        <p class="card-text">Discover the history of Catalan's players and managers like Messi and Ronaldinho.</p>
       </div>
         <p class="xaliss">Price: 120€</p>
       <div class="card-footer">
-        <small class="text-body-secondary"><button class="cartess">Add to cart</button></small>
+        <small class="text-body-secondary"><button class="button" style="vertical-align:middle"><span>Add</span></button></small>
       </div>
     </div>
   </div>
@@ -53,12 +75,19 @@
     <div class="card h-100">
       <img src="assets/IMG/esKayak.jpg" class="card-img-top" alt="...">
       <div class="card-body">
-        <h5 class="card-title">Kayak</h5>
-        <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+        <h5 class="card-title"><span title="Duration 2 hrs and Valid for 1 day">Kayak</span></h5>
+           <div class="star-rating me-3">
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star"></span>
+                  <span class="fa fa-star"></span>
+                </div>
+        <p class="card-text">Costa Brava Kayak, Snorkeling and Cliff Jumping with Lunch.</p>
       </div>
       <p class="xaliss">Price: 40€</p>
       <div class="card-footer">
-        <small class="text-body-secondary"><button class="cartess">Add to cart</button> </small>
+        <small class="text-body-secondary"><button class="button" style="vertical-align:middle"><span>Add</span></button></small>
       </div>
     </div>
   </div>
@@ -66,12 +95,19 @@
     <div class="card h-100">
       <img src="assets/IMG/EsAqua.jpg" class="card-img-top" alt="...">
       <div class="card-body">
-        <h5 class="card-title">Aquarium of Barcelona</h5>
-        <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+        <h5 class="card-title"><span title="Duration 2 hrs and Valid for 1 day">Aquarium of Barcelona</span></h5>
+           <div class="star-rating me-3">
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star"></span>
+                  <span class="fa fa-star"></span>
+                </div>
+        <p class="card-text">The aquarium is known for its extensive collection of marine life from around the world.</p>
       </div>
       <p class="xaliss">Price: 25€</p>
       <div class="card-footer">
-        <small class="text-body-secondary"><button class="cartess">Add to cart</button></small>
+        <small class="text-body-secondary"><button class="button" style="vertical-align:middle"><span>Add</span></button></small>
       </div>
     </div>
   </div>
@@ -79,12 +115,19 @@
     <div class="card h-100">
       <img src="assets/IMG/esPaddle.jpg" class="card-img-top" alt="...">
       <div class="card-body">
-        <h5 class="card-title">Paddleboard</h5>
-        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. </p>
+        <h5 class="card-title"><span title="Duration 1 hr and Valid for 1 day">Paddleboard</span></h5>
+           <div class="star-rating me-3">
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star"></span>
+                  <span class="fa fa-star"></span>
+                </div>
+        <p class="card-text">Paddleboard at sunrise with instructor and photos at Barceloneta Beach. </p>
       </div>
       <p class="xaliss">Price: 70€</p>
       <div class="card-footer">
-        <small class="text-body-secondary"><button class="cartess">Add to cart</button></small>
+        <small class="text-body-secondary"><button class="button" style="vertical-align:middle"><span>Add</span></button></small>
       </div>
     </div>
   </div>
