--- a/templates/activities3/tokyo.html.twig
+++ b/templates/activities3/tokyo.html.twig
@@ -3,8 +3,11 @@
 {% block title %}Tokyo Welcome!{% endblock %}
 
 {% block body %}
-<h1 class="dalal">Welcome to Tokyo! 東京へようこそ</h1>
-<h3 class="taneu">Choose your activities</h3>
+<br>
+<h1 class="animated-title">Welcome to Tokyo! </h1>
+<h3 class="dalal">東京へようこそ</h3>
+<h5 class="dalal">This paradise on earth combines breathtaking landscapes, unique biodiversity and characteristic architecture.</h5><br>
+<h3 class="animated-titles"><b>Tokyo:</b> popular activities</h3>
 
 <div class="tokyo">
 <div class="row row-cols-1 row-cols-md-3 g-4">
@@ -12,11 +15,19 @@
     <div class="card h-100">
       <img src="assets/IMG/tkManga.jpg" class="card-img-top" alt="...">
       <div class="card-body">
-        <h5 class="card-title">Manga's museum</h5>
-        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. </p>
+        <h5 class="card-title"><span title="Duration 1.5 hrs and Valid for 1 day">Manga's museum</span></h5>
+        <div class="star-rating me-3">
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star"></span>
+                  <span class="fa fa-star"></span>
+                </div>
+        <p class="card-text">The Studio Ghibli Museum, located in Mitaka, the museum focuses on the popular animation studio of Manga. </p>
       </div>
+      <p class="xaliss">Price: 35€</p>
       <div class="card-footer">
-        <small class="text-body-secondary"><button class="cartess">Add to cart</button></small>
+        <small class="text-body-secondary"><button class="button" style="vertical-align:middle"><span>Add</span></button></small>
       </div>
     </div>
   </div>
@@ -24,11 +35,19 @@
     <div class="card h-100">
       <img src="assets/IMG/tkSumo.jpg" class="card-img-top" alt="...">
       <div class="card-body">
-        <h5 class="card-title">Ryogoku - Sumo's center</h5>
-        <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+        <h5 class="card-title"><span title="Duration 1 hr and Valid for 3 days">Ryogoku - Sumo's center</span></h5>
+        <div class="star-rating me-3">
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star"></span>
+                  <span class="fa fa-star"></span>
+                </div>
+        <p class="card-text">Learn the rules of sumo and how to practice it, watch demonstrations, then try wrestling yourself in Ryogoku.</p>
       </div>
+      <p class="xaliss">Price: 80€</p>
       <div class="card-footer">
-        <small class="text-body-secondary"><button class="cartess">Add to cart</button></small>
+        <small class="text-body-secondary"><button class="button" style="vertical-align:middle"><span>Add</span></button></small>
       </div>
     </div>
   </div>
@@ -36,11 +55,19 @@
     <div class="card h-100">
       <img src="assets/IMG/tkNinja.jpg" class="card-img-top" alt="...">
       <div class="card-body">
-        <h5 class="card-title">Ninja's house of Tokyo</h5>
-        <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+        <h5 class="card-title"><span title="Duration 2 hrs and Valid for 1 week">Ninja's house of Tokyo</span></h5>
+        <div class="star-rating me-3">
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star"></span>
+                  <span class="fa fa-star"></span>
+                </div>
+        <p class="card-text">Nestled in the heart of Tokyo, Nezu Shrine is an ancient cultural site renowned for its stunning architecture and peaceful atmosphere.</p>
       </div>
+      <p class="xaliss">Price: 125€</p>
       <div class="card-footer">
-        <small class="text-body-secondary"><button class="cartess">Add to cart</button></small>
+       <small class="text-body-secondary"><button class="button" style="vertical-align:middle"><span>Add</span></button></small>
       </div>
     </div>
   </div>
@@ -48,11 +75,19 @@
     <div class="card h-100">
       <img src="assets/IMG/tkParcA.jpg" class="card-img-top" alt="...">
       <div class="card-body">
-        <h5 class="card-title">Dome amusement park</h5>
-        <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+        <h5 class="card-title"><Span title="Duration 3 hrs and Valid for 1 day">Dome amusement park</Span></h5>
+        <div class="star-rating me-3">
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star"></span>
+                  <span class="fa fa-star"></span>
+                </div>
+        <p class="card-text">Day trip to Mount Fuji area, Oshino Hakkai and Lake Kawaguchi in the colorful Dome amusement park.</p>
       </div>
+      <p class="xaliss">Price: 30€</p>
       <div class="card-footer">
-        <small class="text-body-secondary"><button class="cartess">Add to cart</button> </small>
+        <small class="text-body-secondary"><button class="button" style="vertical-align:middle"><span>Add</span></button></small>
       </div>
     </div>
   </div>
@@ -60,11 +95,19 @@
     <div class="card h-100">
       <img src="assets/IMG/tkHK.jpg" class="card-img-top" alt="...">
       <div class="card-body">
-        <h5 class="card-title">Sanrio Puroland</h5>
-        <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+        <h5 class="card-title"><span title="Duration 2 hrs and Valid for 1 day">Sanrio Puroland</span></h5>
+        <div class="star-rating me-3">
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star"></span>
+                  <span class="fa fa-star"></span>
+                </div>
+        <p class="card-text">Discover the charming Sanrio Puroland in Tokyo with this admission ticket. Explore the world of Hello Kitty, witness the Miracle Gift.</p>
       </div>
+      <p class="xaliss">Price: 210€</p>
       <div class="card-footer">
-        <small class="text-body-secondary"><button class="cartess">Add to cart</button></small>
+        <small class="text-body-secondary"><button class="button" style="vertical-align:middle"><span>Add</span></button></small>
       </div>
     </div>
   </div>
@@ -72,11 +115,19 @@
     <div class="card h-100">
       <img src="assets/IMG/tkOcean.jpg" class="card-img-top" alt="...">
       <div class="card-body">
-        <h5 class="card-title">Mikurajima</h5>
-        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. </p>
+        <h5 class="card-title"><span title="Duration 8 hrs and Valid for 1 week">Mikurajima</span></h5>
+        <div class="star-rating me-3">
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star"></span>
+                  <span class="fa fa-star"></span>
+                </div>
+        <p class="card-text">Discover Mount Mikurajima on a full-day tour from Tokyo. Admire the grandeur of Japan's highest peak.</p>
       </div>
+      <p class="xaliss">Price: 70€</p>
       <div class="card-footer">
-        <small class="text-body-secondary"><button class="cartess">Add to cart</button></small>
+        <small class="text-body-secondary"><button class="button" style="vertical-align:middle"><span>Add</span></button></small>
       </div>
     </div>
   </div>
