--- a/templates/activities4/bali.html.twig
+++ b/templates/activities4/bali.html.twig
@@ -3,19 +3,19 @@
 {% block title %}Bali!{% endblock %}
 
 {% block body %}
-<br>
-<h1 class="animated-title">Welcome to Helsinki! </h1>
-<h2 class="dalal">Tervetuloa Helsinkiin</h2>
-<br>
-<h5 class="dalal">The Finnish capital fascinates with its clean air, artistic monuments and modern architecture.</h5><br>
-<h3 class="animated-titles"><b>Helsinki:</b> popular activities</h3>
+
+<h1 class="animated-title">Welcome to Bali! </h1>
+<h2 class="dalal">Selamat Datang di Bali</h2>
+<h5 class="dalal">Prepare to fall in love with its nightlife, irresistible boutiques and exceptional gastronomy.</h5><br>
+<h3 class="animated-titles"><b>Bali:</b> popular activities</h3>
+
 <div class="tokyo">
 <div class="row row-cols-1 row-cols-md-3 g-4">
   <div class="col">
     <div class="card h-100">
-      <img src="assets/IMG/hlIsland.jpg" class="card-img-top" alt="...">
+      <img src="assets/IMG/blF.webp" class="card-img-top" alt="...">
       <div class="card-body">
-        <h5 class="card-title"><span title="Duration 3 hrs and Valid for 2 days">Sightseeing tour in Suomenlinna</span></h5>
+        <h5 class="card-title"><span title="Duration 1.5 hrs and Valid for 1 day">Uluwatu Kecak and Fire Dance</span></h5>
            <div class="star-rating me-3">
                   <span class="fa fa-star checked"></span>
                   <span class="fa fa-star checked"></span>
@@ -23,7 +23,67 @@
                   <span class="fa fa-star"></span>
                   <span class="fa fa-star"></span>
                 </div>
-        <p class="card-text">Discover the sights of Helsinki on a 5-hour guided tour and marvel at attractions like the Sibelius Monument and Esplanade Park. </p>
+        <p class="card-text">Watch Balinese natives perform mesmerizing Kecak dances, complete with swirling flames and traditional costumes.</p>
+      </div>
+      <p class="xaliss">Price: 60€</p>
+      <div class="card-footer">
+        <small class="text-body-secondary"><button class="button" style="vertical-align:middle"><span>Add</span></button></small>
+      </div>
+    </div>
+  </div>
+  <div class="col">
+    <div class="card h-100">
+      <img src="assets/IMG/blMB.jpg" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title"><span title="Duration 7 hrs and Valid for 1 day">Mont Batur</span></h5>
+           <div class="star-rating me-3">
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star"></span>
+                  <span class="fa fa-star"></span>
+                </div>
+        <p class="card-text">Admire the best views of Bali on this early morning hike to Batur Volcano. Contemplate an unforgettable sunrise once at the summit.</p>
+      </div>
+        <p class="xaliss">Price: 30€</p>
+      <div class="card-footer">
+        <small class="text-body-secondary"><button class="button" style="vertical-align:middle"><span>Add</span></button></small>
+      </div>
+    </div>
+  </div>
+  <div class="col">
+    <div class="card h-100">
+      <img src="assets/IMG/blDolphin.jpg" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title"><span title="Duration 2 hrs and Valid for 3 days">Lovina - Bali</span></h5>
+           <div class="star-rating me-3">
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star"></span>
+                  <span class="fa fa-star"></span>
+                </div>
+        <p class="card-text">Excursion to the north of Bali to see dolphins in their natural habitat, swim alongside them and go snorkeling in Lovina.</p>
+      </div>
+        <p class="xaliss">Price: 220€</p>
+      <div class="card-footer">
+        <small class="text-body-secondary"><button class="button" style="vertical-align:middle"><span>Add</span></button></small>
+      </div>
+    </div>
+  </div>
+  <div class="col">
+    <div class="card h-100">
+      <img src="assets/IMG/blQuad.jpg" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title"><span title="Duration 2 hrs and Valid for 1 day">Quad Bike Adventure in Ubud</span></h5>
+           <div class="star-rating me-3">
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star"></span>
+                  <span class="fa fa-star"></span>
+                </div>
+        <p class="card-text">Embark on an exhilarating quad bike adventure through picturesque landscapes, followed by relaxation at the Sunset Cretya Pool.</p>
       </div>
       <p class="xaliss">Price: 40€</p>
       <div class="card-footer">
@@ -33,9 +93,9 @@
   </div>
   <div class="col">
     <div class="card h-100">
-      <img src="assets/IMG/hlSea.jpg" class="card-img-top" alt="...">
+      <img src="assets/IMG/blSwim.jpg" class="card-img-top" alt="...">
       <div class="card-body">
-        <h5 class="card-title"><span title="Duration 4 hrs and Valid for 1 day">Sea Life</span></h5>
+        <h5 class="card-title"><span title="Duration 5 hrs and Valid for 1 week">Manta Point Snorkeling</span></h5>
            <div class="star-rating me-3">
                   <span class="fa fa-star checked"></span>
                   <span class="fa fa-star checked"></span>
@@ -43,9 +103,9 @@
                   <span class="fa fa-star"></span>
                   <span class="fa fa-star"></span>
                 </div>
-        <p class="card-text">Discover the world under the ocean and amazing sea creatures such as sharks, chaat fish at Sea Life Helsinki.</p>
+        <p class="card-text">Take a full-day tour from Nusa Penida, swim, snorkel and encounter the magnificent Manta Rays.</p>
       </div>
-        <p class="xaliss">Price: 70€</p>
+      <p class="xaliss">Price: 325€</p>
       <div class="card-footer">
         <small class="text-body-secondary"><button class="button" style="vertical-align:middle"><span>Add</span></button></small>
       </div>
@@ -53,9 +113,9 @@
   </div>
   <div class="col">
     <div class="card h-100">
-      <img src="assets/IMG/hlParc.jpg" class="card-img-top" alt="...">
+      <img src="assets/IMG/blTemple.jpg" class="card-img-top" alt="...">
       <div class="card-body">
-        <h5 class="card-title"><span title="Duration 2 hrs and Valid for 2 weeks">Nuuksio National Park</span></h5>
+        <h5 class="card-title"><span title="Duration 5 hrs and Valid for 1 week">Visit Besakih Temple</span></h5>
            <div class="star-rating me-3">
                   <span class="fa fa-star checked"></span>
                   <span class="fa fa-star checked"></span>
@@ -63,69 +123,9 @@
                   <span class="fa fa-star"></span>
                   <span class="fa fa-star"></span>
                 </div>
-        <p class="card-text">Admire and go for a hike in the company of a biologist. tall coniferous forests, lakes and ancient cliffs covered in moss and lichens.</p>
+        <p class="card-text">Take a private tour and take magical photos of the Gates of Heaven in Pura Lempuyang, with the majestic Mount Agung as a backdrop.</p>
       </div>
-        <p class="xaliss">Price: 90€</p>
-      <div class="card-footer">
-        <small class="text-body-secondary"><button class="button" style="vertical-align:middle"><span>Add</span></button></small>
-      </div>
-    </div>
-  </div>
-  <div class="col">
-    <div class="card h-100">
-      <img src="assets/IMG/hlChurch.jpg" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title"><span title="Duration 1 hr and Valid for 1 day">Temppeliaukio Church</span></h5>
-           <div class="star-rating me-3">
-                  <span class="fa fa-star checked"></span>
-                  <span class="fa fa-star checked"></span>
-                  <span class="fa fa-star checked"></span>
-                  <span class="fa fa-star"></span>
-                  <span class="fa fa-star"></span>
-                </div>
-        <p class="card-text">Discover this architectural gem in Helsinki. A jewel of Finnish architecture, a world-famous site, a working church and a renowned concert venue.</p>
-      </div>
-      <p class="xaliss">Price: 15€</p>
-      <div class="card-footer">
-        <small class="text-body-secondary"><button class="button" style="vertical-align:middle"><span>Add</span></button></small>
-      </div>
-    </div>
-  </div>
-  <div class="col">
-    <div class="card h-100">
-      <img src="assets/IMG/hlSnow.jpg" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title"><span title="Duration 30mn and Valid for 1 day">Survival Experience</span></h5>
-           <div class="star-rating me-3">
-                  <span class="fa fa-star checked"></span>
-                  <span class="fa fa-star checked"></span>
-                  <span class="fa fa-star checked"></span>
-                  <span class="fa fa-star"></span>
-                  <span class="fa fa-star"></span>
-                </div>
-        <p class="card-text">Discover what it's like to float in water while staying warm and dry with a survival suit experience in the heart of Helsinki.</p>
-      </div>
-      <p class="xaliss">Price: 35€</p>
-      <div class="card-footer">
-        <small class="text-body-secondary"><button class="button" style="vertical-align:middle"><span>Add</span></button></small>
-      </div>
-    </div>
-  </div>
-  <div class="col">
-    <div class="card h-100">
-      <img src="assets/IMG/hlOB.jpg" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title"><span title="Duration 3 hrs and Valid for 2 days">Northern Lights Adventure</span></h5>
-           <div class="star-rating me-3">
-                  <span class="fa fa-star checked"></span>
-                  <span class="fa fa-star checked"></span>
-                  <span class="fa fa-star checked"></span>
-                  <span class="fa fa-star"></span>
-                  <span class="fa fa-star"></span>
-                </div>
-        <p class="card-text">A group of islands in the Finnish capital, known for its picturesque landscapes, peaceful nature and recreational activities. </p>
-      </div>
-      <p class="xaliss">Price: 310€</p>
+      <p class="xaliss">Price: 50€</p>
       <div class="card-footer">
         <small class="text-body-secondary"><button class="button" style="vertical-align:middle"><span>Add</span></button></small>
       </div>
