--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -13,7 +13,7 @@
         <link rel="stylesheet" href="assets/CSS/order.css">
         <link rel="stylesheet" href="assets/CSS/adminDashboard.css">
         <link rel="stylesheet" href="assets/CSS/help.css">
-        <link rel="stylesheet" href="assets/CSS/activities.css">
+        <link rel="stylesheet" href="assets/CSS/activitie.css">
         <link rel="stylesheet" href="assets/CSS/rgpd.css">
         {% endblock %}
 
