--- a/templates/destination/destination.html.twig
+++ b/templates/destination/destination.html.twig
@@ -46,7 +46,7 @@
        parfois piquant.</p>
 
       </div>
-      <button class="btn btn-primary">Choisir Hotel</button>
+    
 
       <div class="row row-cols-1 row-cols-md-3 g-4 ">
         <div class="col ">
@@ -66,11 +66,11 @@
               <p class="card-text"><strong>A partir de : $108</strong></p>
               <div class="d-flex align-items-center">
                 
-                <button class="btn btn-primary">Details</button>
+               
               </div>
             </div>
             <div class="card-footer">
-              <small class="text-body-secondary">Last updated 3 mins ago</small>
+              <small class="text-body-secondary"><button class="btn btn-primary">Details</button></small>
             </div>
           </div>
         </div>
@@ -90,11 +90,11 @@
               <p class="card-text"><strong>A partir de : $399</strong></p>
               <div class="d-flex align-items-center">
                 
-                <button class="btn btn-primary">Details</button>
+                
               </div>
             </div>
             <div class="card-footer">
-              <small class="text-body-secondary">Last updated 3 mins ago</small>
+              <small class="text-body-secondary"><button class="btn btn-primary">Details</button></small>
             </div>
           </div>
         </div>
@@ -115,11 +115,11 @@
               <p class="card-text"><strong>A partir de: $99</strong></p>
               <div class="d-flex align-items-center">
                
-                <button class="btn btn-primary">Details</button>
+              
               </div>
             </div>
             <div class="card-footer">
-              <small class="text-body-secondary">Last updated 3 mins ago</small>
+              <small class="text-body-secondary">  <button class="btn btn-primary">Details</button></small>
             </div>
           </div>
         </div>
