--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,6 +14,8 @@
         <link rel="stylesheet" href="assets/CSS/help.css">
         <link rel="stylesheet" href="assets/CSS/rgpd.css">
         <link rel="stylesheet" href="assets/CSS/notice.css">
+        <link rel="stylesheet" href="assets/CSS/request.css">
+        <link rel="stylesheet" href="assets/CSS/register.css">
         {% endblock %}
 
         {% block javascripts %}
