--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -27,8 +27,8 @@
     </head>
     <body>
 
-        {# {% include "navbar/navbar.html.twig" %} #}
-        {% include "navbar_connected/navbarConnected.html.twig" %}
+        {% include "navbar/navbar.html.twig" %}
+        {# {% include "navbar_connected/navbarConnected.html.twig" %} #}
         {% block body %}
         {% endblock %}
         {% include "footer/footer.html.twig" %}
