--- a/templates/navbar_connected/navbarConnected.html.twig
+++ b/templates/navbar_connected/navbarConnected.html.twig
@@ -13,11 +13,11 @@
           <ul class="navbar-nav me-auto">
             <li class="nav-item d-flex mx-2">
                 <img src="assets/IMG/airplane.png" id="imgAirplane" alt="stay">
-              <a class="nav-link button px-2 mx-1 w-100" id="stay" href="#">Sign up</a>
+              <a class="nav-link button px-2 mx-1 w-100" id="stay" href="#">Your Stay</a>
             </li>
             <li class="nav-item mx-2">
                 <img src="assets/IMG/profile.png" id="imgProfile" alt="profile">
-              <a class="nav-link button px-3 mx-1 w-100" id="profile" href="#">Login</a>
+              <a class="nav-link button px-3 mx-1 w-100" id="profile" href="#">User .X</a>
             </li>
           </ul>
           
